# talk2text

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  build-deb.sh  pyproject.toml  pysidedeploy.spec
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: deb-packaging.md
packaging/: io.github.m0b1n.Talk2Text.desktop  main.py
src/talk2text/: __init__.py  __main__.py  audio.py  config.py  errors.py  history_store.py  models.py  ollama_client.py  pipeline.py  transcription.py  ui.py  ui_layout.py  ui_shortcuts.py  worker_client.py  worker_runtime.py
tests/: test_config.py  test_history_store.py  test_ollama_client.py  test_pipeline.py  test_ui_shortcuts.py  test_worker_runtime.py
