[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "talk2text"
version = "0.1.0"
description = "Ubuntu desktop speech-to-text app powered by faster-whisper and Ollama"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "m0b1n"},
]
keywords = [
  "ubuntu",
  "speech-to-text",
  "whisper",
  "ollama",
  "pyside6",
  "desktop",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Utilities",
]
dependencies = [
  "faster-whisper>=1.1.1",
  "numpy>=1.26,<3",
  "PySide6>=6.7",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.11.0",
]

[project.scripts]
talk2text = "talk2text.ui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]
